test/good/unbound-loop-2.expected.out
test/good/unbound-loop-2.tact:2:5:
  1 | fun test(): Int {
> 2 |     let a: Int = 20; // read-only variable
          ^
  3 |     do  { // error: a is not changing within the loop
Read-only variable
Help: Consider creating a constant instead
See: https://nowarp.github.io/docs/misti/docs/detectors/ReadOnlyVariables

test/good/unbound-loop-2.tact:4:14:
  3 |     do  { // error: a is not changing within the loop
> 4 |     } until (a > 10);
                   ^
  5 |     return a;
Unbounded Loop: The condition variable doesn't change within the loop
Help: Consider changing the variable within the loop to ensure it terminates
See: https://nowarp.github.io/docs/misti/docs/detectors/UnboundLoops